[package]
name = "reentrancy-guard-stylus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "reentrancy", "security"]
description = "ReentrancyGuard implementation for Stylus smart contracts in Rust"

[dependencies]
alloy-primitives = { version = "0.8.20", default-features = false }
alloy-sol-types = { version = "0.8.20", default-features = false }
stylus-sdk = { version = "0.9.0", default-features = false }
mini-alloc = "0.4.2"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "reentrancy-guard-stylus"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"